[gd_scene load_steps=12 format=3 uid="uid://bvr6pjuau5noi"]

[ext_resource type="Script" uid="uid://ci83gs3bkbyh4" path="res://Scripts/Player/player_movement.gd" id="1_qhqgy"]
[ext_resource type="PackedScene" uid="uid://bk26mij5r3bbl" path="res://Scenes/Components/HealthComponent.tscn" id="2_8erm5"]
[ext_resource type="Script" uid="uid://dfwyus0mfu76u" path="res://Scripts/camera.gd" id="2_x3wgy"]
[ext_resource type="PackedScene" uid="uid://c0gq8trldftv0" path="res://Scenes/Components/HitboxComponent.tscn" id="3_f1ek2"]
[ext_resource type="Script" uid="uid://b13u0ty16kbto" path="res://Scripts/Player/trail_line.gd" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://b118d671n3r7b" path="res://Sprites/crosshair043.png" id="5_8erm5"]
[ext_resource type="PackedScene" uid="uid://bodr213y7ryu7" path="res://Scenes/explode particle.tscn" id="5_fkybt"]
[ext_resource type="PackedScene" uid="uid://44magkyc6d5o" path="res://Scenes/healthbar.tscn" id="8_8erm5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 3.68421

[sub_resource type="Curve" id="Curve_qhqgy"]
bake_resolution = 500
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_qhqgy"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[node name="player" type="CharacterBody2D"]
scale = Vector2(1.9, 1.9)
script = ExtResource("1_qhqgy")

[node name="HealthComponent" parent="." instance=ExtResource("2_8erm5")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_f1ek2")]
unique_name_in_owner = true
health_component = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent"]
position = Vector2(3.15789, 0)
polygon = PackedVector2Array(-3.15789, -8.42105, 5.26316, 0, -3.15789, 8.42105, -11.5789, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qhqgy")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
script = ExtResource("2_x3wgy")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_8erm5")

[node name="Line2D" type="Line2D" parent="Sprite2D"]
show_behind_parent = true
top_level = true
z_index = -1
points = PackedVector2Array(0, 0)
width = 5.0
width_curve = SubResource("Curve_qhqgy")
gradient = SubResource("Gradient_qhqgy")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 15
script = ExtResource("4_dqkch")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Explode Particle" parent="." instance=ExtResource("5_fkybt")]
scale = Vector2(6, 6)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health" parent="CanvasLayer" node_paths=PackedStringArray("health_component") instance=ExtResource("8_8erm5")]
health_component = NodePath("../../HealthComponent")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_area_entered"]
